--- a/src/css/app.css
+++ b/src/css/app.css
@@ -253,6 +253,21 @@ textarea:focus {
 
   }
 
+  .icon-btn {
+    width: 1.5em;
+    height: 1.5em;
+    font-size: 20px;
+    display: inline-flex;
+    justify-content: center;
+    margin: .5em;
+    align-items: center;
+    border-radius: 50%;
+    overflow: hidden;
+    cursor: pointer;
+    color: var(--text-primary-dark);
+  }
+
+
 }
 
 
